tolk-tester/tests/invalid-declaration/err-1084.tolk
fun someDemo() {
    return 0;
}

/**
@compilation_should_fail
@stderr the contract has no entrypoint
 */
